Automatically *trim* strings.

--- a/INetGet.vcxproj
+++ b/INetGet.vcxproj
@@ -13,9 +13,11 @@
   <ItemGroup>
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\URL.cpp" />
+    <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\URL.h" />
+    <ClInclude Include="src\Utils.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{157E1DB2-A934-4AB6-99CF-626AADB42F79}</ProjectGuid>
