--- a/INetGet.vcxproj
+++ b/INetGet.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="src\Client_HTTP.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Params.cpp" />
+    <ClCompile Include="src\Types.cpp" />
     <ClCompile Include="src\URL.cpp" />
     <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
@@ -22,6 +23,7 @@
     <ClInclude Include="src\Client_Abstract.h" />
     <ClInclude Include="src\Client_HTTP.h" />
     <ClInclude Include="src\Params.h" />
+    <ClInclude Include="src\Types.h" />
     <ClInclude Include="src\URL.h" />
     <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Version.h" />
