--- a/INetGet_VC120.vcxproj.filters
+++ b/INetGet_VC120.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\Zero.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Client_FTP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\URL.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Client_FTP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
