--- a/z_paths.bat.template
+++ b/z_paths.bat.template
@@ -1,2 +1,6 @@
 @echo off
-set "INETGET_PANDOC_PATH=D:\Pandoc"
+
+set "INETGET_MSVC_PATH=C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC"
+set "INETGET_UPX3_PATH=C:\Program Files (x86)\UPX"
+set "INETGET_PDOC_PATH=C:\Program Files (x86)\Pandoc"
+set "INETGET_TOOL_VERS=100"
