Fixed DEBUG configuration + documentation updates + update reminder.

--- a/INetGet_VC100.vcxproj
+++ b/INetGet_VC100.vcxproj
@@ -179,6 +179,7 @@
       <CreateHotpatchableImage>false</CreateHotpatchableImage>
       <TreatWarningAsError>true</TreatWarningAsError>
       <DisableSpecificWarnings>4127;4510;4512;4610;4706</DisableSpecificWarnings>
+      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
