--- a/INetGet_VC120.vcxproj
+++ b/INetGet_VC120.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\Sink_Null.cpp" />
     <ClCompile Include="src\Sink_StdOut.cpp" />
     <ClCompile Include="src\Slunk.cpp" />
+    <ClCompile Include="src\Sync.cpp" />
     <ClCompile Include="src\Timer.cpp" />
     <ClCompile Include="src\Types.cpp" />
     <ClCompile Include="src\URL.cpp" />
@@ -47,6 +48,7 @@
     <ClInclude Include="src\Sink_Null.h" />
     <ClInclude Include="src\Sink_StdOut.h" />
     <ClInclude Include="src\Slunk.h" />
+    <ClInclude Include="src\Sync.h" />
     <ClInclude Include="src\Timer.h" />
     <ClInclude Include="src\Types.h" />
     <ClInclude Include="src\URL.h" />
